# spelgud

./: Cargo.toml  README.md
src/: file.rs  lib.rs  main.rs  spell.rs  workspace.rs
testdata/: example.txt
tests/: integration_test.rs
