[package]
name = "spelgud"
version = "1.0.1"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.94.1"
lsp-server = "0.7.4"
log = "0.4.20"
env_logger = { version = "0.10.1", default-features = false }
which = "6.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.1"
